--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -736,6 +736,7 @@ fa:
         categories: طبقه بندی ها
         filter: فیلتر
         map: نقشه
+      reset_label: 
     search_results:
       bridge: برای جستجوی عبارت
       enclosing: پیدا کردن
@@ -1347,6 +1348,8 @@ fa:
         text: |-
           با clarat پیدا کردن کمک آسانتر می شود.در آلمان پیشنهاد های زیادی وجود دارند که از کودکان و جوانان و خانواده ها حمایت می کنند و همچنین پیشنهاد های زیادی برای پناهندگان.اما اغلب پیدا کردن آنها سخت می باشد.اگر در مورد موضوع خانواده باشد در clarat family و اگر در مورد موضوع پناهندگی در  clarat
           refugees جستجو کن.
+      explaination:
+        headline: 
     impressum:
       heading: اطلاعات کلی سازمان
       notice: clarat یک  ماشین جستجو است و به تو می گوید که کجا کمک دریافت می کنی.بطور مثال کجا کارشناسانی را پیدا می کنی که تو را با مشکی که داری کمک کنند.clarat تو را فقط در جستجوی کمک یاری می دهد.
@@ -1417,6 +1420,15 @@ fa:
       meta_description: clarat.org نشان می دهد که چه کمکهایی در آلمان وجود دارد.برای کودکان٬ جوانان و خانواده‌ها و پناهندگان. بصورت آنلاین٬ آسان و در نزدیکی آنها.
       meta_title: clarat شفاف سازی می کند | clarat
       title: لطفا موضوع خود را از دنیای clarat انتخاب کنید
+      cta:
+        button: 
+        family:
+          text: 
+        refugees:
+          text: 
+      mission:
+        headline: 
+        text: 
     shared:
       address:
         email: "%{mailto}"
