--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -773,6 +773,7 @@ fr:
         categories: Catégories
         filter: Filtre
         map: Carte
+      reset_label: 
     search_results:
       bridge: pour le terme de recherche
       enclosing: trouvé
@@ -1367,6 +1368,8 @@ fr:
       why:
         heading: Clarat, pourquoi ça existe?
         text: Avec clarat on peut facilement trouver de l’aide. En Allemagne, il y a beaucoup d'offres d'aide pour les enfants, les ados et les familles. Aussi pour les réfugiés. Mais ils ne sont pas toujours faciles à trouver. Nous allons t’aider.  S’il est question de sujets ayant trait à la famille, va sur clarat family. S’il est question de sujets ayant trait aux réfugiés, va sur clarat refugees.
+      explaination:
+        headline: 
     impressum:
       heading: Impressum
       notice: clarat est un moteur de recherche. clarat te dit où tu peux trouver de l'aide. Par exemple, où tu peux trouver un expert capable de t'aider à résoudre ton problème. clarat peut seulement t'aider à effectuer ta recherche.
@@ -1448,6 +1451,15 @@ fr:
       meta_description: 
       meta_title: 
       title: Choisis ton monde clarat
+      cta:
+        button: 
+        family:
+          text: 
+        refugees:
+          text: 
+      mission:
+        headline: 
+        text: 
     shared:
       address:
         email: "%{mailto}\n"
