--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -802,6 +802,7 @@ ru:
         categories: категории
         filter: Фильтр
         map: карта
+      reset_label: 
     search_results:
       bridge: для
       enclosing: найдено
@@ -1408,6 +1409,8 @@ ru:
       why:
         heading: Для чего существует clarat?
         text: clarat помогает найти необходимую помощь. В Германии существует множество организаций по поддержке детей, молодежи и семей, а так же для помощи беженцам. Однако часто их довольно сложно найти. Именно в этом мы и помогаем. Если речь идет о семейных вопросах и проблемах, тебе нужно в clarat family (кларат фэмили). Если о беженцах - clarat refugees (кларат рефюджис).
+      explaination:
+        headline: 
     impressum:
       heading: Impressum
       notice: clarat — это поисковик. clarat скажет вам, где вы можете получить помощь. Например, где вы найдете специалистов, которые помогут с вашей проблемой. clarat также может помочь вам в ваших поисках.
@@ -1489,6 +1492,15 @@ ru:
       meta_description: 
       meta_title: 
       title: Пожалуйста,  выберите ваш мир clarat
+      cta:
+        button: 
+        family:
+          text: 
+        refugees:
+          text: 
+      mission:
+        headline: 
+        text: 
     shared:
       address:
         email: "%{mailto}\n"
