--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1000,6 +1000,9 @@ en:
       hero:
         claim:
           family: Support services for children, teenagers and families
+        hero:
+          logline: 
+          button_label: 
       callout:
         callout:
           how:
