--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1029,6 +1029,9 @@ fr:
       hero:
         claim:
           family: Offres d'aide pour les enfants, les ados et les familles
+        hero:
+          logline: 
+          button_label: 
       callout:
         callout:
           how:
