--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1065,6 +1065,9 @@ ru:
       hero:
         claim:
           family: Предложения о помощи детям, молодежи и семьям
+        hero:
+          logline: 
+          button_label: 
       callout:
         callout:
           how:
